# nightly-trick

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs  main.rs
